# python-devops-cicd-project

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yaml
src/simple_http_checker/: checker.py  cli.py
src/simple_http_checker/.github/workflows/: python-ci.yaml
tests/: test_checker.py  test_cli.py
