[build]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build.meta"

[project]
name = "simple-http-checker"
version = "0.1.0"
description = "Simple CLI to to check status of URLs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"