[build]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build.meta"

[project]
name = "simple_http_checker"
version = "0.1.0"
description = "Simple CLI to to check status of URLs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "black",
  "mypy",
  "bandit",
  "types-requests"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]

[tools.pytest.ini_options]
addopts = "-rA -s -v"